# company-insight-bot

./: .gitignore  app.py  config.py  pyproject.toml  test_pipeline.py
components/chunkers/: recursive_chunker.py
components/embedders/: sentence_transformer_embedder.py
components/llm_clients/: ollama_client.py
components/loaders/: pdf_loader.py
components/vector_stores/: chroma_store.py
core/: interfaces.py  models.py
pipeline/: ingestion.py  query.py
prompt/: builder.py
